Villanova_Dev1/src/objects/VEM_Location_Resource__c.object
<CustomObject>
    <description>Junction object for many-to-many relationship between Villanova locations and resources</description>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Select a location to associate with this resource</inlineHelpText>
        <label>Location</label>
        <referenceTo>VEM_Location__c</referenceTo>
        <relationshipLabel>Location Resources</relationshipLabel>
        <relationshipName>Location_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the number of this item required</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <inlineHelpText>Select a resource to associate with this location</inlineHelpText>
        <label>Resource</label>
        <referenceTo>VEM_Resource__c</referenceTo>
        <relationshipLabel>Location Resources</relationshipLabel>
        <relationshipName>Resource_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location Resource</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Location Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Value must be a positive number</errorMessage>
    </validationRules>
</CustomObject>